Version History
===============

3.0b2
-----
* Fixed author.cpt to work in Plone 4 by adding missing globals.
  [cah190 (Craig Haynal)]

* Replaced direct page template references to facultystaffdirectory_tool with 
  getToolByName lookups to allow for anonymous viewing of listings.
  [cah190 (Craig Haynal)]

* Added missing icon references to GS type information.
  [cah190 (Craig Haynal)]

* Defined global variables (template_id, normalizeString, member) in skin templates.
  [lvb5153 (Luke Brannon)]

* Removed document_action macros from FSD skin templates.
  [lvb5153 (Luke Brannon)]

* Registered document_actions viewlet to abovecontentbody viewlet manager
  for FSD types (in configure.zcml, since there is no browser package).
  [lvb5153 (Luke Brannon)]

* Replaced object_title global definition with context/Title in FSD
  skin templates.
  [lvb5153 (Luke Brannon)]

3.0b1
-----
* Add Plone 4.0 compatibility.
  [ems174, cah190, cewing, netropic]

2.1.5
-----
* Italian translation merged
  (https://weblion.psu.edu/trac/weblion/ticket/1266).
  [cah190 (Craig Haynal)]

* Updated portal_memberdata image generation based on suggestions
  from michael.lindig and updated tests accordingly
  (https://weblion.psu.edu/trac/weblion/ticket/1204).
  [cah190 (Craig Haynal)]

* Fixed Classification's getPeople to account for effective/
  expired, View permissions
  (https://weblion.psu.edu/trac/weblion/ticket/2036)
  [par117 (Paul Rentschler)]

* Added a termination details field and put it and the effective/
  expired dates in a new Employment Information schemata
  [par117 (Paul Rentschler)]

* Updated the person_view.pt file to hide all information except
  the person's name and termination details if they are expired
  unless the viewer has editing rights.
  [par117 (Paul Rentschler)]

2.1.4
-----

* Owner role should be able to edit Persons in Hidden state.
  [ems174 (Eric Steele)]

* Portuguese translation merged.
  [cah190 (Craig Haynal)]
