@@ -1,11 +1,14 @@
 from zope.interface import implements
 from zope.component import adapts
+from Products.CMFCore.utils import getToolByName
 from Products.membrane.interfaces import IGroup
+from Products.FacultyStaffDirectory.config import TOOLNAME as FSD_TOOL
 from Products.FacultyStaffDirectory.interfaces.committee import ICommittee
 from Products.FacultyStaffDirectory.membership.person import UserRelated
 
+
 class Group(object):
-    """Allow a FacultyStaffDirectory to act as a group for contained people
+    """Allow a Committee to act as a group for contained people
     """
     implements(IGroup)
     adapts(ICommittee)
@@ -26,6 +29,11 @@ class Group(object):
         return self.context.getId()
 
     def getGroupMembers(self):
+        fsd_tool = getToolByName(self.context,FSD_TOOL)
+        state = getToolByName(self.context, 'portal_workflow').getInfoFor(self.context, 'review_state')
+        if state not in (fsd_tool.getActiveMembraneStates()):
+            return ()
+
         members = self.context.getMembers()
         mlist = [UserRelated(m).getUserId() for m in members]
         return tuple(mlist)
