@@ -47,10 +47,6 @@ class testClassification(testPlone):
         self.classification.setTitle('New Title')
         self.failUnless(g.Title()=='New Title',"IGroup.getTitle is not finding the correct title:\nexpected: %s\nfound: %s" % (self.classification.Title(),g.Title()))
         
-        #Let's start off with a deactivated object since we may want to change the default state at some point.
-        if wf.getInfoFor(self.classification, 'review_state') == 'active':
-            wf.doActionFor(self.classification,'deactivate')
-        
         # group id is set on content object, uniqueness is enforced elsewhere
         self.failUnless(g.getGroupId()==self.classification.getId(),"getGroupId returning incorrect value:\nExpected: %s\nReceived: %s" % (self.classification.getId(), g.getGroupId()))
         
@@ -69,6 +65,11 @@ class testClassification(testPlone):
         members = list(g.getGroupMembers())
         members.sort()
         self.failUnless(members == ['abc123','def456'],"incorrect member list: %s" % members)
+        #deactivate group and verify emptiness
+        wf.doActionFor(self.classification,'deactivate')
+        members = list(g.getGroupMembers())
+        members.sort()
+        self.failUnless(members == [],"deactivated group has non-empty member list: %s" % members)        
         
     def testValidateId(self):
         """Test that the validate_id validator works properly
