@@ -56,10 +56,6 @@ class testCommittee(testPlone):
         self.committee.setTitle('New Title')
         self.failUnless(g.Title()=='New Title',"IGroup.getTitle is not finding the correct title:\nexpected: %s\nfound: %s" % (self.committee.Title(),g.Title()))
 
-        #Let's start off with a deactivated object since we may want to change the default state at some point.
-        if wf.getInfoFor(self.committee, 'review_state') == 'active':
-            wf.doActionFor(self.committee,'deactivate')
-
         # group id is set on content object, uniqueness is enforced elsewhere
         self.failUnless(g.getGroupId()==self.committee.getId(),"getGroupId returning incorrect value:\nExpected: %s\nReceived: %s" % (self.committee.getId(), g.getGroupId()))
         
@@ -81,6 +77,11 @@ class testCommittee(testPlone):
         members.sort()
         self.failUnless(members == ['abc123','def456'],
                         "incorrect member list: %s" % members)
+        #deactivate group and verify emptiness
+        wf.doActionFor(self.committee,'deactivate')
+        members = list(g.getGroupMembers())
+        members.sort()
+        self.failUnless(members == [],"deactivated group has non-empty member list: %s" % members)
         
     def testValidateId(self):
         """Test that the validate_id validator works properly
