@@ -130,6 +130,19 @@ Tool_schema = BaseSchema.copy() +Schema((
         default=MEMBRANE_ABLE_TYPES,
     ),
 
+    LinesField(
+        name='activeMembraneStates',
+        widget=LinesWidget(
+            label=_(u"FacultyStaffDirectory_label_activeMembraneStates", default=u"List the workflow states which indicate membership and/or group behavior"),
+            description=_(u"FacultyStaffDirectory_description_activeMembraneStates", default=u"List one workflow state per line; the states listed below will indicate membership behavior should be enabled for Person objects or group behavior should be enabled for Classification, Committee, and Department objects."),
+            i18n_domain='FacultyStaffDirectory',
+        ),
+        schemata="Membership",
+        multiValued=True,
+        default=MEMBRANE_ACTIVE_STATES,
+    ),
+
+
     BooleanField(
         name='useInternalPassword',
         widget=BooleanWidget(
